--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Porto CSS Tailwind</title>
-    <link href="/public/style.css" rel="stylesheet">
+    <link href="public/style.css" rel="stylesheet">
 </head>
 <body>
     <!-- Header Start -->
@@ -69,7 +69,7 @@
         <!-- Ini Mulai Gambar -->
         <div class="w-full self-end px-4 lg:w-1/2">
           <div class="relative mt-10 lg:mt-9 lg:right-0">
-            <img src="/public/profilproject.png" alt="Anime" class="max-w-full mx-auto">
+            <img src="public/profilproject.png" alt="Anime" class="max-w-full mx-auto">
             <span class="absolute bottom-0 -z-10 left-1/2 -translate-x-1/2 md:scale-125" >
               <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                 <path fill="#4ade80" d="M67.1,-23.2C75.8,5.1,64.2,38.7,40.1,56.5C16,74.4,-20.6,76.5,-43.6,59.8C-66.7,43.1,-76.3,7.6,-66.7,-21.8C-57.2,-51.2,-28.6,-74.5,0.3,-74.6C29.2,-74.7,58.3,-51.6,67.1,-23.2Z" 
@@ -142,7 +142,7 @@
         <!-- Project 1 -->
        <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
-          <img src="/public/portofolio/Contoh-1.jpg" alt="Naruto 1" width="w-full">
+          <img src="public/portofolio/Contoh-1.jpg" alt="Naruto 1" width="w-full">
         </div>
         <h3 class="font-semibold text-xl text-dark mt-5 mb-3s">Bingung Mau Nulis Apa</h3>
         <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque temporibus sunt doloribus.</p>
@@ -150,7 +150,7 @@
       <!-- Project 2 -->
        <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
-          <img src="/public/portofolio/Contoh-2.jpg" alt="Naruto 1" width="w-full">
+          <img src="public/portofolio/Contoh-2.jpg" alt="Naruto 1" width="w-full">
         </div>
         <h3 class="font-semibold text-xl text-dark mt-5 mb-3s">Bingung Mau Nulis Apa</h3>
         <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque temporibus sunt doloribus.</p>
@@ -158,7 +158,7 @@
       <!-- Project 3 -->
        <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
-          <img src="/public/portofolio/Contoh-3.jpg" alt="Naruto 1" width="w-full">
+          <img src="public/portofolio/Contoh-3.jpg" alt="Naruto 1" width="w-full">
         </div>
         <h3 class="font-semibold text-xl text-dark mt-5 mb-3s">Bingung Mau Nulis Apa</h3>
         <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque temporibus sunt doloribus.</p>
@@ -166,7 +166,7 @@
       <!-- Project 4 -->
        <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
-          <img src="/public/portofolio/Contoh-4.jpeg" alt="Naruto 1" width="w-full">
+          <img src="public/portofolio/Contoh-4.jpeg" alt="Naruto 1" width="w-full">
         </div>
         <h3 class="font-semibold text-xl text-dark mt-5 mb-3s">Bingung Mau Nulis Apa</h3>
         <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque temporibus sunt doloribus.</p>
@@ -339,6 +339,6 @@
   </footer>
   <!-- Footer Finish -->
 
-  <script src="/public/script.js"></script>
+  <script src="public/script.js"></script>
 </body>
 </html>
