--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
 
 
   <!-- Service Section Start -->
-  <section id="services" class="py-16">
-    <div class="container mx-auto px-4 bg-slate-700 text-white py-16 rounded-lg">
+  <section id="services" class="py-16 bg-slate-700">
+    <div class="container mx-auto px-4 text-white py-16 rounded-lg">
         <h4 class="font-semibold text-lg text-primary mb-6 text-center">Skills/Services</h4>
         <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl text-center">Berikut adalah skill yang saya kuasai:</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
