--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">Accountant Beginner & 
             <span class="text-dark">Web Developer</span></h2>
           <p class="font-medium text-slate-500 mb-10">Saya Belajar Untuk Memperluas Pengetahuan Terkait Bahasa Pemograman</p>
-          <a href="#" class="text-base font-semibold text-white
+          <a href="https://wa.me/qr/A5ROWS7XATPJN1" class="text-base font-semibold text-white
           bg-primary py-3 px-8 rounded-full hover:shadow-lg
           hover:opacity-80 transition duration-300 ease-in-out">Hubungi Saya</a>
         </div>
