--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         <div class="w-full self-center px-4 lg:w-1/2" >
           <h1 class="text-base font-semibold text-primary md:text-xl">Halo Semua, Saya 
             <span class="block font-bold text-dark text-4xl mt-1 lg:text-5xl">Arif Hidayat</span></h1>
-          <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">Accountant Beginner & 
-            <span class="text-dark">Web Developer</span></h2>
-          <p class="font-medium text-slate-500 mb-10">Saya Belajar Untuk Memperluas Pengetahuan Terkait Bahasa Pemograman</p>
+          <h2 class="font-medium text-dark text-lg mb-5 lg:text-2xl">Pelajar SMK Spesialisasi 
+            <span class="text-dark">Akuntansi dan Keuangan Lembaga</span></h2>
+          <p class="font-medium text-slate-500 mb-10 text-justify">Selamat datang di portofolio saya! Saat ini, saya sedang mengasah keterampilan untuk mempersiapkan diri menghadapi tantangan di dunia industri dan dunia kerja di masa mendatang.</p>
           <a href="#" class="text-base font-semibold text-white
           bg-primary py-3 px-8 rounded-full hover:shadow-lg
           hover:opacity-80 transition duration-300 ease-in-out">Hubungi Saya</a>
@@ -90,8 +90,8 @@
       <div class="flex flex-wrap">
         <div class="w-full px-4 mb-10 lg:w-1/2">
           <h4 class="font-bold uppercase text-primary text-lg mb-3">Tentang Saya</h4>
-          <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">Halo Saya Adalah Anak SMK Jurusan Akuntansi</h2>
-          <p class="font-medium text-base text-slate-500 max-w-xl lg:text-lg">Saya Tertarik Belajar Pemograman Karena Saya Pengin Bisa Mengenal Dunia IT Lebih Luas</p>
+          <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">Profil Singkat Mengenai Saya:</h2>
+          <p class="font-medium text-base text-slate-500 max-w-xl lg:text-lg text-justify">Halo, saya Arif Hidayat, pelajar SMK bidang Program Keahlian Akuntansi dan Keuangan Lembaga. Saya memiliki latar belakang dalam pembelajaran akuntansi dengan fokus pada pemahaman dasar-dasar keuangan dan laporan keuangan. Saat ini, saya sedang memperluas pengetahuan saya di berbagai bidang akademis dan non-akademis. Saya tengah berusaha untuk terus mengembangkan diri dalam lingkungan belajar yang dinamis agar lebih siap untuk menghadapi tantangan baru dalam dunia industri atau dunia kerja.</p>
         </div>
         <!-- About Section Ke-2 -->
         <div class="w-full px-4 lg:w-1/2">
@@ -142,34 +142,38 @@
         <!-- Project 1 -->
        <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
-          <img src="/public/portofolio/Contoh-1.jpg" alt="Naruto 1" width="w-full">
+          <img src="/public/portofolio/Contoh-5.webp" alt="Naruto 1" width="w-full">
         </div>
-        <h3 class="font-semibold text-xl text-dark mt-5 mb-3s">Bingung Mau Nulis Apa</h3>
-        <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque temporibus sunt doloribus.</p>
+        <h3 class="font-semibold text-xl text-dark mt-5 mb-3s">Belum Ada Proyek</h3>
+        <p class="font-medium text-base text-secondary">Saat ini, saya belum memiliki proyek yang dapat dipublikasikan. Namun, saya sedang dalam proses mempelajari dan memahami berbagai konsep. Saya sedang berusaha untuk segera memulai proyek-proyek yang relevan untuk menerapkan pengetahuan yang saya peroleh dan menambah pengalaman untuk dunia kerja nanti.
+        </p>
       </div>
       <!-- Project 2 -->
        <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
-          <img src="/public/portofolio/Contoh-2.jpg" alt="Naruto 1" width="w-full">
+          <img src="/public/portofolio/Contoh-5.webp" alt="Naruto 1" width="w-full">
         </div>
-        <h3 class="font-semibold text-xl text-dark mt-5 mb-3s">Bingung Mau Nulis Apa</h3>
-        <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque temporibus sunt doloribus.</p>
+        <h3 class="font-semibold text-xl text-dark mt-5 mb-3s">Belum Ada Proyek</h3>
+        <p class="font-medium text-base text-secondary">Saat ini, saya belum memiliki proyek yang dapat dipublikasikan. Namun, saya sedang dalam proses mempelajari dan memahami berbagai konsep. Saya sedang berusaha untuk segera memulai proyek-proyek yang relevan untuk menerapkan pengetahuan yang saya peroleh dan menambah pengalaman untuk dunia kerja nanti.
+        </p>
       </div>
       <!-- Project 3 -->
        <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
-          <img src="/public/portofolio/Contoh-3.jpg" alt="Naruto 1" width="w-full">
+          <img src="/public/portofolio/Contoh-5.webp" alt="Naruto 1" width="w-full">
         </div>
-        <h3 class="font-semibold text-xl text-dark mt-5 mb-3s">Bingung Mau Nulis Apa</h3>
-        <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque temporibus sunt doloribus.</p>
+        <h3 class="font-semibold text-xl text-dark mt-5 mb-3s">Belum Ada Proyek</h3>
+        <p class="font-medium text-base text-secondary">Saat ini, saya belum memiliki proyek yang dapat dipublikasikan. Namun, saya sedang dalam proses mempelajari dan memahami berbagai konsep. Saya sedang berusaha untuk segera memulai proyek-proyek yang relevan untuk menerapkan pengetahuan yang saya peroleh dan menambah pengalaman untuk dunia kerja nanti.
+        </p>
       </div>
       <!-- Project 4 -->
        <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
-          <img src="/public/portofolio/Contoh-4.jpeg" alt="Naruto 1" width="w-full">
+          <img src="/public/portofolio/Contoh-5.webp" alt="Naruto 1" width="w-full">
         </div>
-        <h3 class="font-semibold text-xl text-dark mt-5 mb-3s">Bingung Mau Nulis Apa</h3>
-        <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque temporibus sunt doloribus.</p>
+        <h3 class="font-semibold text-xl text-dark mt-5 mb-3s">Belum Ada Proyek</h3>
+        <p class="font-medium text-base text-secondary">Saat ini, saya belum memiliki proyek yang dapat dipublikasikan. Namun, saya sedang dalam proses mempelajari dan memahami berbagai konsep. Saya sedang berusaha untuk segera memulai proyek-proyek yang relevan untuk menerapkan pengetahuan yang saya peroleh dan menambah pengalaman untuk dunia kerja nanti.
+        </p>
       </div>
      </div>
     </div>
@@ -178,8 +182,8 @@
 
 
   <!-- Service Section Start -->
-  <section id="services" class="py-16">
-    <div class="container mx-auto px-4 bg-slate-700 text-white py-16 rounded-lg">
+  <section id="services" class="py-16 bg-slate-700">
+    <div class="container mx-auto px-4 text-white py-16 rounded-lg">
         <h4 class="font-semibold text-lg text-primary mb-6 text-center">Skills/Services</h4>
         <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl text-center">Berikut adalah skill yang saya kuasai:</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
@@ -227,7 +231,7 @@
       </div>
   
       <div class="w-full lg:w-2/3 lg:mx-auto">
-        <form>
+        <form action="https://github.com/Arif075/porto/issues/new" method="GET" target="_blank">
           <div class="w-full lg:w-2/3 lg:mx-auto">
           <div class="mb-6">
             <label for="name" class="block text-secondary font-semibold mb-2">Name</label>
@@ -273,13 +277,13 @@
           <h3 class="font-semibold text-xl text-white mb-5">Kategori tulisan</h3>
           <ul class="text-slate-300">
             <li>
-              <a href="#" class="inline-block text-base hover:text-primary mb-3">Bingung Cuy</a>
+              <a href="#" class="inline-block text-base hover:text-primary mb-3">Akuntansi dan Keuangan Lembaga</a>
             </li>
             <li>
-              <a href="#" class="inline-block text-base hover:text-primary mb-3">Bingung Cuy</a>
+              <a href="#" class="inline-block text-base hover:text-primary mb-3">Persiapan Dunia Kerja</a>
             </li>
             <li>
-              <a href="#" class="inline-block text-base hover:text-primary mb-3">Bingung Cuy</a>
+              <a href="#" class="inline-block text-base hover:text-primary mb-3">Bingung Ini diisi Apa</a>
             </li>
           </ul>
         </div>
