--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="w-full px-4 mb-10 lg:w-1/2">
           <h4 class="font-bold uppercase text-primary text-lg mb-3">Tentang Saya</h4>
           <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">Profil Singkat Mengenai Saya:</h2>
-          <p class="font-medium text-base text-slate-500 max-w-xl lg:text-lg text-justify">Halo, saya Arif Hidayat, pelajar SMK bidang Program Keahlian Akuntansi dan Keuangan Lembaga. Saya memiliki latar belakang dalam pembelajaran akuntansi dengan fokus pada pemahaman dasar-dasar keuangan dan laporan keuangan. Saat ini, saya sedang memperluas pengetahuan saya di berbagai bidang akademis dan non-akademis. Saya tengah berusaha untuk terus mengembangkan diri dalam lingkungan belajar yang dinamis agar lebih siap untuk menghadapi tantangan baru dalam dunia industri atau dunia kerja.</p>
+          <p class="font-medium text-base text-slate-500 lg:text-lg text-justify">Halo, saya Arif Hidayat, pelajar SMK bidang Program Keahlian Akuntansi dan Keuangan Lembaga. Saya memiliki latar belakang dalam pembelajaran akuntansi dengan fokus pada pemahaman dasar-dasar keuangan dan laporan keuangan. Saat ini, saya sedang memperluas pengetahuan saya di berbagai bidang akademis dan non-akademis. Saya tengah berusaha untuk terus mengembangkan diri dalam lingkungan belajar yang dinamis agar lebih siap untuk menghadapi tantangan baru dalam dunia industri atau dunia kerja.</p>
         </div>
         <!-- About Section Ke-2 -->
         <div class="w-full px-4 lg:w-1/2">
@@ -144,7 +144,7 @@
           <img src="/public/portofolio/Contoh-5.webp" alt="Naruto 1" width="w-full">
         </div>
         <h3 class="font-semibold text-xl text-dark mt-5 mb-3s">Belum Ada Proyek</h3>
-        <p class="font-medium text-base text-secondary">Saat ini, saya belum memiliki proyek yang dapat dipublikasikan. Namun, saya sedang dalam proses mempelajari dan memahami berbagai konsep. Saya sedang berusaha untuk segera memulai proyek-proyek yang relevan untuk menerapkan pengetahuan yang saya peroleh dan menambah pengalaman untuk dunia kerja nanti.
+        <p class="font-medium text-base text-secondary text-justify">Saat ini, saya belum memiliki proyek yang dapat dipublikasikan. Namun, saya sedang dalam proses mempelajari dan memahami berbagai konsep. Saya sedang berusaha untuk segera memulai proyek-proyek yang relevan untuk menerapkan pengetahuan yang saya peroleh dan menambah pengalaman untuk dunia kerja nanti.
         </p>
       </div>
       <!-- Project 2 -->
@@ -153,7 +153,7 @@
           <img src="/public/portofolio/Contoh-5.webp" alt="Naruto 1" width="w-full">
         </div>
         <h3 class="font-semibold text-xl text-dark mt-5 mb-3s">Belum Ada Proyek</h3>
-        <p class="font-medium text-base text-secondary">Saat ini, saya belum memiliki proyek yang dapat dipublikasikan. Namun, saya sedang dalam proses mempelajari dan memahami berbagai konsep. Saya sedang berusaha untuk segera memulai proyek-proyek yang relevan untuk menerapkan pengetahuan yang saya peroleh dan menambah pengalaman untuk dunia kerja nanti.
+        <p class="font-medium text-base text-secondary text-justify">Saat ini, saya belum memiliki proyek yang dapat dipublikasikan. Namun, saya sedang dalam proses mempelajari dan memahami berbagai konsep. Saya sedang berusaha untuk segera memulai proyek-proyek yang relevan untuk menerapkan pengetahuan yang saya peroleh dan menambah pengalaman untuk dunia kerja nanti.
         </p>
       </div>
       <!-- Project 3 -->
@@ -162,7 +162,7 @@
           <img src="/public/portofolio/Contoh-5.webp" alt="Naruto 1" width="w-full">
         </div>
         <h3 class="font-semibold text-xl text-dark mt-5 mb-3s">Belum Ada Proyek</h3>
-        <p class="font-medium text-base text-secondary">Saat ini, saya belum memiliki proyek yang dapat dipublikasikan. Namun, saya sedang dalam proses mempelajari dan memahami berbagai konsep. Saya sedang berusaha untuk segera memulai proyek-proyek yang relevan untuk menerapkan pengetahuan yang saya peroleh dan menambah pengalaman untuk dunia kerja nanti.
+        <p class="font-medium text-base text-secondary text-justify">Saat ini, saya belum memiliki proyek yang dapat dipublikasikan. Namun, saya sedang dalam proses mempelajari dan memahami berbagai konsep. Saya sedang berusaha untuk segera memulai proyek-proyek yang relevan untuk menerapkan pengetahuan yang saya peroleh dan menambah pengalaman untuk dunia kerja nanti.
         </p>
       </div>
       <!-- Project 4 -->
@@ -171,7 +171,7 @@
           <img src="/public/portofolio/Contoh-5.webp" alt="Naruto 1" width="w-full">
         </div>
         <h3 class="font-semibold text-xl text-dark mt-5 mb-3s">Belum Ada Proyek</h3>
-        <p class="font-medium text-base text-secondary">Saat ini, saya belum memiliki proyek yang dapat dipublikasikan. Namun, saya sedang dalam proses mempelajari dan memahami berbagai konsep. Saya sedang berusaha untuk segera memulai proyek-proyek yang relevan untuk menerapkan pengetahuan yang saya peroleh dan menambah pengalaman untuk dunia kerja nanti.
+        <p class="font-medium text-base text-secondary text-justify">Saat ini, saya belum memiliki proyek yang dapat dipublikasikan. Namun, saya sedang dalam proses mempelajari dan memahami berbagai konsep. Saya sedang berusaha untuk segera memulai proyek-proyek yang relevan untuk menerapkan pengetahuan yang saya peroleh dan menambah pengalaman untuk dunia kerja nanti.
         </p>
       </div>
      </div>
